# flipper-mcp2518fd-app

./: .gitmodules  Cargo.toml  Dockerfile  README.md  build.ps1  build.sh  shell.nix
.github/workflows/: _build-and-test-app.yml  rust.yml
app/: Cargo.toml  rust-toolchain.toml
app/.cargo/: config.toml
app/src/: main.rs
