cargo-features = ["different-binary-name"]

[package]
name = "flipper-mcp2518fd-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "flipper-mcp2518fd-app"
filename = "flipper-mcp2518fd-app.fap"
bench = false
test = false

[dependencies]
flipperzero = { version = "0.11.0" }
flipperzero-sys = { version = "0.11.0" }
flipperzero-rt = { version = "0.11.0" }
