cargo-features = ["different-binary-name"]

[package]
name = "flipper-mcp2518fd-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "flipper-mcp2518fd-app"
filename = "flipper-mcp2518fd-app.fap"
bench = false
test = false

[dependencies]
flipperzero = { path = "../flipperzero/crates/flipperzero" }
flipperzero-sys = { path = "../flipperzero/crates/sys" }
flipperzero-rt = { path = "../flipperzero/crates/rt" }
flipperzero-alloc = { path = "../flipperzero/crates/alloc" }
ufmt = "0.2.0"
